--- a/src/assets/styles/configs/_fontstacksConfig.scss
+++ b/src/assets/styles/configs/_fontstacksConfig.scss
@@ -1,3 +1,6 @@
+/* <link rel="stylesheet" href="
+https://use.typekit.net/rkl4lug.css"> */
+
 @font-face {
   font-family:"Freight_Display_Pro";
   src:url("https://use.typekit.net/af/2c7224/000000000000000077359fa2/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff2"),url("https://use.typekit.net/af/2c7224/000000000000000077359fa2/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff"),url("https://use.typekit.net/af/2c7224/000000000000000077359fa2/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("opentype");
