--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -2,6 +2,24 @@
 
 // Brand Colours
 $colors: (
+  "midnight-brown": #271610,
+  "metallic": #A98E76,
+  "chocolate-brown": #7E6952,
+  "metallic-grey": #C5B5A3,
+  "brown-grey": #A3A3A3,
+  "tint-broze": #FCF6EA,
+  "dark-green": #464F4A,
+  "green-grey": #869184,
+  "bronze-grey": #E4DDCD,
+
+  "grey": #403F3D,
+  "grey-dark": #282828,
+  "grey-mid": #787775,
+  "grey-light": #E9E8E3,
+  "grey-light-2": #f8f8f8,
+  "grey-light-3": #E9E6E3,
+  "grey-tint": #F6F5F2,
+ 
   "blue": #0033A0,
   "turquoise": #00AEC7,
   "sky-blue": #00A3E0,
@@ -14,11 +32,7 @@ $colors: (
   "white": #ffffff,
   "black": #180D22,
   "yellow": #FFC72C,
-  "grey": #525b5d,
-  "grey-mid": #D1D1D1,
-  "grey-light": #F6F6F6,
-  "grey-golden": #DEDCD7,
-  "light-grey": #f8f8f8,
+
   "orange": #faab51,
   "pink": #e7519d,
   "red": #e61933,
