--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -7,10 +7,13 @@ $colors: (
   "chocolate-brown": #7E6952,
   "metallic-grey": #C5B5A3,
   "brown-grey": #A3A3A3,
-  "tint-broze": #FCF6EA,
-  "dark-green": #464F4A,
-  "green-grey": #869184,
+  "tint-broze": #FCF6EA, 
   "bronze-grey": #E4DDCD,
+  "green-dark": #464F4A,
+  "green-metallic": #686F5D,
+  "green-grey": #869184,
+  "green-greyish": #F2F4F2,
+  "green-greyish-light": #DADEDA,
 
   "grey": #403F3D,
   "grey-dark": #282828,
