added siddiqi footer

--- a/src/assets/styles/partials/_typography.scss
+++ b/src/assets/styles/partials/_typography.scss
@@ -22,8 +22,25 @@
   font-variant-numeric: lining-nums proportional-nums;
 }
 
+@mixin heading_light {
+  font-family: "Haboro_Contrast_Light", sans-serif;
+  font-style: normal;
+  font-variant-numeric: lining-nums proportional-nums;
+}
+
+@mixin heading_light_italic {
+  font-family: "Haboro_Contrast_Light_Italic", sans-serif;
+  font-style: normal;
+  font-variant-numeric: lining-nums proportional-nums;
+}
+
 @mixin body_regular {
   font-family: "Urbanist_Regular", sans-serif;
+  font-style: normal;
+  font-variant-numeric: lining-nums proportional-nums;
+}
+@mixin body_light {
+  font-family: "Urbanist_Light", sans-serif;
   font-style: normal;
   font-variant-numeric: lining-nums proportional-nums;
 }
