--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-bottom: 1px solid getColorHex("grey-light");
+  border-bottom: rem(1) solid getColorHex("grey-light");
 
   .headerLogoContainer {
     display: flex;
@@ -29,7 +29,7 @@
       padding: rem(4 0);
       border-bottom: 1px solid getColorHex("green-dark");
       color: getColorHex("green-dark");
-      max-width: 250px;
+      max-width: rem(250);
     }
 
     .links {
@@ -38,29 +38,29 @@
       justify-content: center;
       flex: 1;
       width: 100%;
-      gap: 36px;
+      gap: rem(36);
 
       .headerLink {
         padding: rem(7 0);
         cursor: pointer;
         color: getColorHex("green-dark");
-        border-bottom: 2px solid #00000000;
+        border-bottom: rem(2) solid #00000000;
 
         &:hover {
-          border-bottom: 2px solid getColorHex("green-dark");
+          border-bottom: rem(2) solid getColorHex("green-dark");
         }
       }
 
       .headerLinkActive {
-        border-bottom: 2px solid getColorHex("green-dark");
+        border-bottom: rem(2) solid getColorHex("green-dark");
       }
     }
 
     .navIcons {
-      max-width: 250px;
+      max-width: rem(250);
       display: flex;
       align-items: center;
-      gap: 28.2px;
+      gap: rem(28.2);
     }
   }
 }
