--- a/src/components/module/megaMenu/megaMenu.module.scss
+++ b/src/components/module/megaMenu/megaMenu.module.scss
@@ -1,9 +1,17 @@
 @import "./../../../assets/styles/main.scss";
 
+// mega menu
 .megaMenuContainer {
   display: flex;
   justify-content: space-between;
-  margin: rem(60 120);
+  padding: rem(60 120);
+
+  position: absolute;
+  top: rem(156);
+  z-index: 2000;
+  width: 100%;
+  left: 0;
+  background-color: getColorHex("white");
 
   .columns {
     width: 100%;
@@ -15,28 +23,55 @@
       gap: rem(87);
       justify-content: space-between;
     }
+  }
+}
 
-    .displayCardsContainer {
+// megamenu right side cards
+.displayCardsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: rem(12);
+}
+
+.displayCards {
+  display: flex;
+  gap: rem(24);
+}
+
+.rightSideContainer {
+  display: flex;
+  gap: rem(40);
+
+  @include xl-max {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  .column1 {
+    display: flex;
+    flex-direction: column;
+    gap: rem(12);
+
+    .storyCardContainer {
+      height: 100%;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
       gap: rem(12);
-      .displayCards {
-        display: flex;
-        gap: rem(24);
-      }
-
-      .displayCardsTitle {
-        font-size: rem(16);
-        font-weight: 400;
-        line-height: rem(20);
-        letter-spacing: rem(0.4);
-      }
-
-      .storyCards {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
     }
   }
+
+  .column2 {
+    gap: rem(12);
+
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.displayCardsTitle {
+  font-size: rem(16);
+  font-weight: 400;
+  line-height: rem(20);
+  letter-spacing: rem(0.4);
 }
