added scroll behavior for header

--- a/src/components/module/desktopHeader/header.module.scss
+++ b/src/components/module/desktopHeader/header.module.scss
@@ -22,6 +22,11 @@
     padding: rem(0);
     gap: rem(0);
     justify-content: center;
+
+    .headerHeight {
+      transition: all 0.3s;
+      top: rem(78);
+    }
     .headerLogoContainer {
       height: 0;
       opacity: 0;
