added language context

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -14,6 +14,7 @@ $colors: (
   "green-grey": #869184,
   "green-greyish": #F2F4F2,
   "green-greyish-light": #DADEDA,
+  "noir": #513629,
 
   "grey": #403F3D,
   "grey-dark": #282828,
